# ChangeLog for www-client/chromium
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.579 2012/03/09 15:24:56 floppym Exp $

  09 Mar 2012; Mike Gilbert <floppym@gentoo.org> chromium-17.0.963.78.ebuild:
  Stable on amd64 per ago. Bug 407465.

*chromium-19.0.1061.1 (09 Mar 2012)

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-19.0.1049.3.ebuild, +chromium-19.0.1061.1.ebuild,
  chromium-9999-r1.ebuild:
  Version bump for dev channel release. Fix bug #407397 by Julien Sanchez. Use
  bundled tlslite again, otherwise net_unittests fail. Remove old.

*chromium-18.0.1025.54 (08 Mar 2012)

  08 Mar 2012; Mike Gilbert <floppym@gentoo.org> +chromium-18.0.1025.54.ebuild,
  -chromium-18.0.1025.39.ebuild:
  Version bump for beta channel release.

*chromium-17.0.963.78 (08 Mar 2012)

  08 Mar 2012; Mike Gilbert <floppym@gentoo.org> +chromium-17.0.963.78.ebuild,
  -chromium-17.0.963.56.ebuild, -chromium-17.0.963.65.ebuild:
  Version bump for stable channel release.

  07 Mar 2012; Thomas Kahle <tomka@gentoo.org> chromium-17.0.963.66.ebuild:
  marked x86 per bug 406975

  07 Mar 2012; Agostino Sarubbo <ago@gentoo.org> chromium-17.0.963.66.ebuild:
  Stable for amd64, wrt bug #406975

*chromium-17.0.963.66 (07 Mar 2012)

  07 Mar 2012; Mike Gilbert <floppym@gentoo.org> +chromium-17.0.963.66.ebuild:
  Version bump for stable channel release.

*chromium-17.0.963.65 (05 Mar 2012)

  05 Mar 2012; Mike Gilbert <floppym@gentoo.org> +chromium-17.0.963.65.ebuild:
  Version bump for stable channel release. Security bug 406975. Filtered
  KeygenHandlerTest, bug 407001.

  03 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-19.0.1055.1.ebuild, chromium-9999-r1.ebuild:
  Use system tlslite instead of the bundled one.

  03 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +files/chromium-glib-r0.patch:
  Add missing patch, reported by floppym.
