@@ -21,24 +21,26 @@ AUX extract_v8_version.py 731 RMD160 71b134c9b88902259cb20ec232b8da6c3d8a15de SH
 AUX nacl.gypi 98 RMD160 fa4806fbc8c2e19763c1905a3bc431022b247825 SHA1 df4cee39e1d49e10f9c075f5e6e9db28e8260926 SHA256 25bddd2eee7821e18ddda06f6e69552c359e1c04a10971ac3985556c3d8ef059
 DIST chromium-17.0.963.66.tar.bz2 165954172 RMD160 de8f94a93c010c700980048c8f9d84b50a67ef0b SHA1 804c61d67eb0a13b3f588d13da882a4900bd6ce8 SHA256 34dc897a64a2bd9be234536232c2649e95d3b2623f5ea715472a78a1bdf14801
 DIST chromium-17.0.963.78.tar.bz2 165967303 RMD160 928a50e7fb36eaf2bc698249b7ce341cba390baf SHA1 cdd0eb63df22f14e51161029211f87d048c98566 SHA256 2956cfeab05def5ab9b21c05a3a49e5d8efadadd4f27c212dd1c185ef05518c9
+DIST chromium-17.0.963.79.tar.bz2 165966945 RMD160 8b206cda5a8ce32933cbab7f96e17bc2efbab715 SHA1 571cdefb61ef9741f326323a3e71ce9345b809cf SHA256 060ced63d5047f74549556d5a8c5f39df05e08bc8e2c9d7b6d0f269bb4e4353e
 DIST chromium-18.0.1025.45.tar.bz2 174374177 RMD160 a023ea3e381bcb16fa85cd1c0e7969a04faf81c4 SHA1 e2a84b5d25f118145cf898202981beb9262d7a04 SHA256 147911c38ed54be2dfc2751fe7b6e7783dd607f6be018881726f195612c91114
 DIST chromium-18.0.1025.54.tar.bz2 174422197 RMD160 dc688a673528c04210bc5f18d91ecc735525c47b SHA1 3a19f68bb6fb84d77e3d2d92736e0914be9e8f8e SHA256 b4c71a2e2b14eec8669ad8c1e7b0ec72ef3553e08a55d8a406f3f0bdc5db202a
 DIST chromium-19.0.1055.1.tar.bz2 177429663 RMD160 3b2385e148ff9e13829abf82b117a9d6e312ba9d SHA1 541aef6af73242ca15472d2a4e0ee921ddf8ddd0 SHA256 c0b189d2bef9cd2c261586b34ac96cec8dc07d67b3b27697af5a763c41af0d39
 DIST chromium-19.0.1061.1.tar.bz2 178745208 RMD160 d72acc4d5a7451776ec2b50aa5fbdc1586c35202 SHA1 5179cf67cefd73fd5be07e0e39f3239d5b3f41f8 SHA256 b3d01c001bc5df0cb463a097904f8720e4c7378161a3c0fa3a48377d15abb906
 EBUILD chromium-17.0.963.66.ebuild 17921 RMD160 d3e4c6b2b66bbf44f494277b7a95c929ea25baaf SHA1 6785b99f65ed71f24899c54bb4f9152a985f0f07 SHA256 b78f60be6cca230f878694d760f1ab1477764e064b6f2227306fb4825e97d031
 EBUILD chromium-17.0.963.78.ebuild 17924 RMD160 7bcf1c05969a14dbcf97d781e5e7e4ebeca8559b SHA1 84cb9928d9443a1684ffd3b29592d99ef43ac1ee SHA256 92b61aeb34cac9ca0eb9e01fdfc2809af33c25a49285a0fa9a3f66de80e573d7
+EBUILD chromium-17.0.963.79.ebuild 17925 RMD160 9c266bbb20c074f84d9b2826c869bac66701834f SHA1 31a35af155bfcc82a988ae21e68a7adf92baa99a SHA256 7d44bc66659960c6802dac4f77b9e5af7787027e4bcc0bd79e5739780ab4aad7
 EBUILD chromium-18.0.1025.45.ebuild 18042 RMD160 ce9a1717959b4c0ff1eb44c46fc6737b614682b1 SHA1 c2ee3d37f7b2d6d451f22d85937214fcd41d81bb SHA256 1e2f6911cc4bfdcf997ca3ef4beac97758b04e6eb9658bcfc7db8017f7f82f34
 EBUILD chromium-18.0.1025.54.ebuild 18039 RMD160 0b03b9a88e78453497d9a5657ed9c73448efb3b0 SHA1 2a3a07578a1cf302722de5239ea560a685d00b02 SHA256 48d586c3b60551efd0b4d40de010e9daff7f1166549f213f3d21f9922914ba3d
 EBUILD chromium-19.0.1055.1.ebuild 17668 RMD160 b58af792f31224a8a5c4616958303ac2aeaf7037 SHA1 c491aefd85a92f9575adbb07fb439428336a9966 SHA256 35d4114f1f20f35b6f075a539ad661011986f8b7bff12ad2d721c467a48e7b9b
 EBUILD chromium-19.0.1061.1.ebuild 17718 RMD160 52e8b9f7e8249bf4a0928a4e8ba398fb95169eda SHA1 eef366ab3ad7cb9b83c6ee2805629816a269436f SHA256 056f5aa2b26ab0a828336f8a7ebc99b110bfdba85600aa9fcdd2ee649727a4e3
 EBUILD chromium-9999-r1.ebuild 19884 RMD160 fd3f002b80dee886ec8f79a8c8fa4bc685b0d185 SHA1 f32032a4997f8ca4e4e767265920de65f03a0a9a SHA256 e345b15140d80992fdd914ba67e166a886cab5374e9bc4f32a146190a5f76c35
-MISC ChangeLog 10268 RMD160 8c9a19e64b3ac5bbaf3d951fbe2d9b3951c9b457 SHA1 b122b7eab35d9f992605a9672ccd9f7b4897b90a SHA256 8d9121419ca8cfbcc71b4470f45d3950944596e26f58ab5d9be70fc3e51eec53
+MISC ChangeLog 10428 RMD160 553d7b1263434c2bd0fb71ceb3b84468c6ed2416 SHA1 695e44ad24c16f49a554ceb6ef0fe661b6ae2c7a SHA256 9a1d0cd946a78eaac3ae8851c46801d3c8c0d6d6d2ad04c3a7afac4a64e4e226
 MISC ChangeLog-2011 114031 RMD160 819d2187b876e03ba1a5f23369eca56e554bcfe6 SHA1 c449259648a4f2633b8812e7761e8cdeaea7f948 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54
 MISC metadata.xml 267 RMD160 3a166415fec415d539c1b7c32ed40b188488b9fb SHA1 5c3d71a9cea27175cbe8c98369b42b79c8643c6c SHA256 4e6afae33f60d6752cacf2785f7f9a396b8711cce605b73d0d752a4af7d01fc8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9aIM4ACgkQC77qH+pIQ6TrEwD9EXf1Ykeq47XMzRzgqXMyPfSO
-zFzFgZR9TMgpq/7kuSUA/3//kzBullSCuqvbsaMFhPhbQ+KE4pMMl9j7zFX6t2rE
-=Qfgp
+iF4EAREIAAYFAk9cHlkACgkQC77qH+pIQ6RglgEAkB+aWI0AAPn7Dua/0trcWPyk
+b5tc2I7Dgh2CMLcCJ6EA/AvzizuudB3Ij23lrIIiS8Q1wud4ZZUlrjtjnmnpNAEN
+=4lQZ
 -----END PGP SIGNATURE-----
